--- a/resources/sass/_form.scss
+++ b/resources/sass/_form.scss
@@ -1,5 +1,5 @@
-.card{
-height: 35em;
+/* .card{
+height: 37em;
 margin-top: auto;
 margin-bottom: auto;
 width: 30em;
@@ -104,3 +104,5 @@ margin-left: 4px;
     color: #fff;
    text-shadow: 1px 1px #2E94BE;
 }
+
+*/
