--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -2712,3 +2712,35 @@ shortcodes page css
 h1, h2, h3, h4, h5, h6{
   opacity: 0.9;
 }
+
+
+/****************************FILE UPLOAD*********************************/
+
+  .dropbox {
+    outline: 2px dashed grey; /* the dash box */
+    outline-offset: -10px;
+    background: lightcyan;
+    color: dimgray;
+    padding: 10px 10px;
+    min-height: 200px; /* minimum height */
+    position: relative;
+    cursor: pointer;
+  }
+
+  .input-file {
+    opacity: 0; /* invisible but it's there! */
+    width: 100%;
+    height: 200px;
+    position: absolute;
+    cursor: pointer;
+  }
+
+  .dropbox:hover {
+    background: lightblue; /* when mouse over to the drop zone, change color */
+  }
+
+  .dropbox p {
+    font-size: 1.2em;
+    text-align: center;
+    padding: 3.125em .4125em;
+  }
